--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -8,12 +8,12 @@ services:
     environment:
       PORT: 8080
       HOST_NAME: search-service
-      ELASTICSEARCH_URL: http://localhost:9200
+      ELASTICSEARCH_URL: http://elasticsearch:9200,elasticsearch2:9200
       LOG_INDEX: kdrive
       LOG_LEVEL: debug
       HEALTH_CHECK_INTERVAL: 5
       ELASTIC_APM_SERVER_URL: 'http://localhost:8200'
-      ELASTIC_APM_SERVICE_NAME: 'permission-service'
+      ELASTIC_APM_SERVICE_NAME: 'search-service'
       ELASTIC_APM_SERVICE_VERSION: '0.1'
       ELASTIC_APM_ENVIRONMENT: 'development'
       ELASTIC_APM_ACTIVE: 'true'
@@ -22,4 +22,39 @@ services:
       ELASTIC_APM_IGNORE_URLS: '/grpc.health.v1.Health/Check'
     ports:
       - 8080:8080
-      
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.2
+    container_name: elasticsearch
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - ./data/es1:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - esnet
+  elasticsearch2:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.4.2
+    container_name: elasticsearch2
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "discovery.zen.ping.unicast.hosts=elasticsearch"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - ./data/es2:/usr/share/elasticsearch/data
+    networks:
+      - esnet
+
+networks:
+  esnet:
