--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,37 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      PORT: 8080
-      HOST_NAME: search-service
-      ELASTICSEARCH_URL: http://localhost:9200
+      SS_PORT: 8080
+      SS_HOST_NAME: search-service
+      SS_ELASTICSEARCH_URL: http://elasticsearch:9200
       LOG_INDEX: kdrive
       LOG_LEVEL: debug
-      HEALTH_CHECK_INTERVAL: 5
+      SS_HEALTH_CHECK_INTERVAL: 5
       ELASTIC_APM_SERVER_URL: 'http://localhost:8200'
-      ELASTIC_APM_SERVICE_NAME: 'permission-service'
+      ELASTIC_APM_SERVICE_NAME: 'search-service'
       ELASTIC_APM_SERVICE_VERSION: '0.1'
       ELASTIC_APM_ENVIRONMENT: 'development'
       ELASTIC_APM_ACTIVE: 'true'
       ELASTIC_APM_CAPTURE_BODY: 'all'
       ELASTIC_APM_METRICS_INTERVAL: '10s'
-      ELASTIC_APM_IGNORE_URLS: '/grpc.health.v1.Health/Check'
+      SS_ELASTIC_APM_IGNORE_URLS: '/grpc.health.v1.Health/Check'
     ports:
       - 8080:8080
-      
+    depends_on: 
+      - elasticsearch
+  elasticsearch:
+    image: sebp/elk
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - es:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+      - 5601:5601
+      - 5044:5044
+
+volumes:
+  es:
+    driver: local
