--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,23 +20,20 @@ services:
       ELASTIC_APM_CAPTURE_BODY: 'all'
       ELASTIC_APM_METRICS_INTERVAL: '10s'
       SS_ELASTIC_APM_IGNORE_URLS: '/grpc.health.v1.Health/Check'
+      SS_ELASTICSEARCH_INDEX: 'files'
     ports:
       - 8080:8080
     depends_on: 
       - elasticsearch
   elasticsearch:
-    image: sebp/elk
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-    volumes:
-      - es:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
-      - 5601:5601
-      - 5044:5044
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.1.0
+    environment: 
+      - discovery.type=single-node
+    container_name: elasticsearch
+    ports: ['9200:9200']
 
-volumes:
-  es:
-    driver: local
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.1.0
+    container_name: kibana
+    ports: ['5601:5601']
+    depends_on: ['elasticsearch']
