--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '2.1'
 services:
   search-service:
     image: search-service:latest
@@ -24,16 +24,21 @@ services:
     ports:
       - 8080:8080
     depends_on: 
-      - elasticsearch
+      elasticsearch:
+        condition: service_healthy
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.1.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.0
     environment: 
       - discovery.type=single-node
     container_name: elasticsearch
     ports: ['9200:9200']
-
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.1.0
+    image: docker.elastic.co/kibana/kibana:7.5.0
     container_name: kibana
     ports: ['5601:5601']
     depends_on: ['elasticsearch']
